# Kerald

./: .dockerignore  .env  AGENTS.md  Cargo.toml  Dockerfile  README.md  waiting-on-musl.html
.devcontainer/: devcontainer.json
.github/agents/: kerald-steward.agent.md
.github/rulesets/: main-required-ci.json
.github/workflows/: ci.yml
.pi/agents/: default-operating.chain.md  kerald-broker-core-engineer.md  kerald-coordination-safety-engineer.md  kerald-java-bindings-junior-engineer.md  kerald-observability-ops-engineer.md  kerald-orchestrator.md  kerald-performance-efficiency-engineer.md  kerald-polyglot-readability-reviewer.md  kerald-protocol-bindings-engineer.md  kerald-python-bindings-junior-engineer.md  kerald-qa-stability-engineer.md  kerald-release-gate-reviewer.md  kerald-requirements-adr-steward.md  kerald-storage-persistence-engineer.md
core/: README.md
core/src/: broker.rs  broker_error_messages.rs  cursor.rs  lib.rs  message.rs  storage.rs  topic.rs
docs/: README.md
docs/adr/: 0000-template.md  0001-cluster-coordination.md  0002-broker-coordination-subsystem.md  0003-async-broker-runtime.md  0004-partitionless-topic-model.md  0004-timestamp-cursor-semantics.md  0005-first-message-flow.md  0005-local-payload-storage-boundary.md  0005-topic-declared-arrow-schemas.md  README.md
docs/architecture/: README.md  broker-coordination.md  broker-runtime.md  cursor-semantics.md  lancedb-persistence.md  language-bindings.md  storage.md  topic-schemas.md  topics.md
docs/operations/: README.md  broker-modes.md  container-images.md  github-merge-gates.md  multi-agent-development-flow.md  pr-quality-gate.md  storage.md
docs/requirements/: README.md  broker-modes.md  cursor-semantics.md  product-mission.md  runtime-and-bindings.md  storage.md  topic-schemas.md  topics.md
qa/integration/: README.md
qa/performance/: README.md
qa/unit/: README.md
tests/: README.md
tests/cucumber/: README.md  broker_modes.rs  payload_storage.rs  timestamp_cursors.rs
tests/cucumber/features/: README.md  broker_modes.feature  payload_storage.feature  timestamp_cursors.feature
tests/cucumber/resources/: broker-zero-port.json
tests/integration/: README.md  broker_startup.rs  cursor_polling.rs  payload_storage.rs
tests/unit-tests/: README.md
tests/unit-tests/resources/broker/: broker-multi-node.toml  broker-multi-node.yaml  broker-single-node.json  broker-zero-expected-brokers.json
tests/unit-tests/src/: broker_modes.rs  payload_storage.rs  timestamp_cursors.rs
