[package]
name = "kerald"
version = "0.1.0"
edition = "2024"
rust-version = "1.95"
license = "MIT"
description = "Lightweight distributed messaging framework"

[lib]
path = "core/src/lib.rs"

[[bin]]
name = "kerald"
path = "core/src/bin/kerald.rs"

[[test]]
name = "unit_broker_modes"
path = "tests/unit-tests/src/broker_modes.rs"

[[test]]
name = "unit_timestamp_cursors"
path = "tests/unit-tests/src/timestamp_cursors.rs"

[[test]]
name = "integration_broker_startup"
path = "tests/integration/broker_startup.rs"

[[test]]
name = "integration_cursor_polling"
path = "tests/integration/cursor_polling.rs"

[[test]]
name = "cucumber_broker_modes"
path = "tests/cucumber/broker_modes.rs"
harness = false

[[test]]
name = "cucumber_timestamp_cursors"
path = "tests/cucumber/timestamp_cursors.rs"
harness = false

[dependencies]
arrow-schema = "58.1.0"
clap = { version = "4.6.1", features = ["derive"] }
config = { version = "0.15.22", default-features = false, features = ["toml", "json", "yaml"] }
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.18"
tokio = { version = "1.52.1", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["fmt", "env-filter"] }
uuid = { version = "1.23.1", features = ["serde", "v4"] }

[dev-dependencies]
cucumber = "0.23.0"
