[package]
name = "kerald"
version = "0.1.0"
edition = "2024"
rust-version = "1.95"
license = "MIT"
description = "Lightweight distributed messaging framework"

[lib]
path = "core/src/lib.rs"

[[bin]]
name = "kerald"
path = "core/src/bin/kerald.rs"

[[test]]
name = "unit_broker_modes"
path = "tests/unit-tests/src/broker_modes.rs"

[[test]]
name = "unit_payload_storage"
path = "tests/unit-tests/src/payload_storage.rs"

[[test]]
name = "integration_broker_startup"
path = "tests/integration/broker_startup.rs"

[[test]]
name = "integration_payload_storage"
path = "tests/integration/payload_storage.rs"

[[test]]
name = "cucumber_broker_modes"
path = "tests/cucumber/broker_modes.rs"
harness = false

[[test]]
name = "cucumber_payload_storage"
path = "tests/cucumber/payload_storage.rs"
harness = false

[dependencies]
arrow-array = "57.0.0"
arrow-schema = "57.0.0"
clap = { version = "4.6.1", features = ["derive"] }
config = { version = "0.15.22", default-features = false, features = ["toml", "json", "yaml"] }
futures = "0.3.32"
lance = { version = "4.0.1", default-features = false }
lance-io = { version = "=4.0.1", default-features = false }
lance-table = { version = "=4.0.1", default-features = false }
object_store = "0.12.3"
object_store_opendal = "0.55.0"
opendal = { version = "0.55.0", default-features = false, features = ["executors-tokio", "services-fs"] }
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.18"
tokio = { version = "1.52.1", features = ["fs", "macros", "rt-multi-thread"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["fmt", "env-filter"] }
uuid = { version = "1.23.1", features = ["serde", "v4"] }

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
unwrap_used = "deny"

[dev-dependencies]
cucumber = "0.23.0"
tempfile = "3.23.0"
